<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="title_activity_running_log_activty">RunningLogActivty</string>
    <string name="plantar_fasciitis">Plantar Fasciitis</string>
    <string name="sprained_ankle">Sprained Ankle</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="pace">Pace</string>
    <string name="strike_percent">Strike %</string>
    <string name="start">Start</string>

</resources>
